Add API documentation and modular structure for energy consumption monitoring
This commit introduces comprehensive documentation for the API, detailing the modular structure and how to integrate AI agents. It includes new markdown files for the API's modular structure and Chatwoot integration, enhancing clarity on how to configure and utilize the system. Additionally, the API has been refactored to improve organization, with dedicated routes and controllers for device management, readings, and consumption queries, streamlining the overall architecture.

--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.0",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "openai": "^4.73.0",
     "prisma": "^6.17.0"
   },
   "devDependencies": {
